--- a/src/javascript/style.css
+++ b/src/javascript/style.css
@@ -4,7 +4,7 @@
   align-items: center;
   font-size: 30px;
   background-color: bisque;
-  height: 200px;
+  height: 30vh;
   padding: 30px;
   font-weight: 700;
 }
@@ -12,11 +12,11 @@
 .button-container {
   display: flex;
   justify-content: space-between;
-  padding: 40px;
+  padding: 10px;
 }
 
 .button {
-  padding: 12px 40px;
+  padding: 12px 30px;
   cursor: pointer;
   font-weight: 700;
   background-color: #f0f0f0;
