--- a/src/javascript/style.css
+++ b/src/javascript/style.css
@@ -19,7 +19,7 @@
   padding: 12px 30px;
   cursor: pointer;
   font-weight: 700;
-  background-color: #f0f0f0;
+  background-color: greenyellow;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
